tests/snapshots/tests__arg__ignore_case_multi.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_option=('TeSt123' 'teST123' 'tESt321')
