tests/snapshots/tests__arg__index.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_mode='fast'
