tests/snapshots/tests__arg__it_fails_when_action_set_twice.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_5ba347da'
[1m[31merror:[0m the argument '[33m--flag <flag>[0m' cannot be used multiple times

[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_5ba347da
exit 1
