tests/snapshots/tests__arg__last-1.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_first='one'
claptrap_third='three'
