tests/snapshots/tests__arg__last-2.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_daf2159a'
[1m[31merror:[0m unexpected argument '[33mthree[0m' found

[1m[4mUsage:[0m [1mprog[0m [first] [second] [1m[--[0m <third>[1m][0m

For more information, try '[1m--help[0m'.
EOF_daf2159a
exit 1
