tests/snapshots/tests__arg__num_args_multi_positional-2.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_word='word'
claptrap_file=('file1' 'file2' 'file3')
