tests/snapshots/tests__arg__num_args_multi_positional_solution.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_file=('file1' 'file2' 'file3')
claptrap_word='word'
