tests/snapshots/tests__arg__num_args_tuples-1.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_file=('in-file' 'out-file')
